--- a/employeeui/package.json
+++ b/employeeui/package.json
@@ -2,15 +2,13 @@
   "name": "employeeui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
-    "@jest/globals": "^26.6.2",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.13.0",
     "axios": "^0.21.1",
-    "enzyme": "^3.11.0",
-    "jest-enzyme": "^7.1.2",
     "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-addons-test-utils": "^15.6.2",
@@ -21,7 +19,8 @@
     "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "salted-md5": "^4.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "mocha": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +49,6 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "enzyme-to-json": "^3.6.1"
-  },
-  "proxy": "http://localhost:8080"
+  }
+
 }
